# bsharp

./: .gitignore  Cargo.toml  LICENSE  README.md  a.bpp  bsharp_test.go  fs.go  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
backends/bsp/: basic.go  blocks.go  bsp.go  nodes.go  stmts.go
backends/bstar/: block.go  bstar.go  call.go  fns.go  map.go  stmts.go
backends/cgen/: any.go  array.go  basic.go  block.go  cgen.go  fns.go  map.go  ops.go  scope.go  stmts.go  struct.go  types.go  val.go  var.go
backends/cgen/std/: std.c
backends/interpreter/: basic.go  block.go  composite.go  extensions.go  fns.go  interpreter.go  ops.go  scope.go  stack.go  stmts.go  val.go  var.go
bot/: README.md  bot.go  build.go  cmds.go  createcmd.go  dg.go  editcmd.go  extensions.go  info.go  lb.go  properties.go  run.go  runcmd.go
bot/db/: autocomplete.go  db.go  load.go  read.go  save.go
bot/test/: main.go
bpp/: README.md  interp.bsp  main.bsp  parser.bsp  run.sh  types.bsp
bpp/funcs/: blds.bsp  blks.bsp  funcs.bsp  math.bsp  ops.bsp  vars.bsp
bpp/interp/: composite.bsp  cond.bsp  interp.bsp  math.bsp  vars.bsp
bpp/types/: types.bsp
bsharp/: Cargo.toml
bsharp-lsp/: README.md  completion.go  diagnostics.go  goto.go  highlight.go  hover.go  ir.go  main.go
bsharp-lsp/vscode/: LICENSE  README.md  language-configuration.json  language-highlight.json  package-lock.json  package.json
bsharp-lsp/vscode/client/src/: extension.ts
bsharp/src/: bstar_run.rs  main.rs  run.rs
bsp/: bsp.sh  build.sh  main.bsp  parser.bsp  run.sh  size.sh  tokens.bsp  types.bsp
bsp/ir/: basic.bsp  build.bsp  ir.bsp  ops.bsp  scope.bsp  stmts.bsp
bstar/: Cargo.toml  interp.bsp  main.bsp  parser.bsp  run.sh  stdlib.bst
bstar/funcs/: blds.bsp  blks.bsp  funcs.bsp  math.bsp  ops.bsp  random.bsp  vars.bsp
bstar/src/: lib.rs  node.rs  stmts.rs  util.rs
docs/: docs.md
examples/: hello.bsp  import.bsp  main.bsharp  main.bsp  math.bsp  siphash.bsp  test.bsp
examples/bot/: cookie.bsp  elemental.bsp  tictactoe.bsp  uses.bsp  wordle.bsp  wordlesetup.bsp
examples/bsp/: main.bsp  parser.bsp  run.sh  tokens.bsp
examples/interp/: main.bsp
fset/: Cargo.toml
fset/src/: error.rs  lib.rs  stdlib.rs
fset/stdlib/: rand.bsp  strconv.bsp  strings.bsp
interp/: Cargo.toml
interp/src/: errors.rs  lib.rs  stmts.rs  values.rs
interp/src/fns/: composite.rs  control.rs  mod.rs  ops.rs  vars.rs
ir/: Cargo.toml  basic.go  block.go  build.go  composite.go  const.go  extensions.go  fns.go  import.go  ir.go  scope.go  stmts.go  types.go  util.go  vals.go  vars.go
ir/src/: defpass.rs  errors.rs  ir.rs  lib.rs  stack.rs  stmts.rs  typecheck.rs  types.rs
ir/src/fns/: arrays.rs  boxes.rs  cast.rs  composite.rs  control.rs  fns.rs  mod.rs  ops.rs  params.rs  typs.rs  vars.rs
lsp/: Cargo.toml  build.go  completion.go  config.go  diagnostics.go  goto.go  hover.go  ir.go  main.go  sync.go
lsp/src/: compile.rs  completion.rs  definition.rs  hover.rs  main.rs  tokenize.rs
lsp/vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  language-highlight.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
lsp/vscode/client/: package-lock.json  package.json
lsp/vscode/client/src/: extension.ts
lsp/vscode/syntaxes/: bsharp.tmLanguage.json
old/: README.md
old/ssa/: fn.go  ssa.go  val.go  var.go
old/ssa/bspgen/: bspgen.go  stmts.go
old/ssa/constrm/: cast.go  const.go  constrm.go  eval.go  phirm.go
old/ssa/dce/: dce.go
old/ssa/memrm/: eval.go  memrm.go
old/ssa/phirm/: phirm.go  stack.go
old/ssa/pipeline/: main.go
old/ssa/ssagen/: block.go  consts.go  fn.go  nodes.go  ssagen.go  ssagen_test.go  stmts.go  val.go  var.go
optimize/: basic.go  block.go  composite.go  expr.go  fns.go  optimize.go  optimize_test.go  scope.go  stmts.go  vals.go  vars.go
parser/: Cargo.toml  nodes.go  parse.go  parser.go
parser/src/: ast.rs  error.rs  lib.rs  parse.rs
ssa/: basic.go  consts.go  fn.go  ir.go  phi.go  ssa.go  val.go  var.go
ssa/bspgen/: bspgen.go  stmts.go
ssa/constrm/: cast.go  const.go  constrm.go  eval.go  phirm.go
ssa/dce/: dce.go
ssa/memrm/: eval.go  memrm.go
ssa/phirm/: phirm.go  stack.go
ssa/pipeline/: main.go
ssa/ssagen/: block.go  consts.go  fn.go  nodes.go  ssagen.go  ssagen_test.go  stmts.go  val.go  var.go
std/: errors.bsp  json.bsp  math.bsp  std.go  strings.bsp
stdlib/: hash.bsp  math.bsp  strconv.bsp  strings.bsp  types.bsp
test/: main.bsp  test.bsp
tokens/: Cargo.toml  stream.go  tokenize.go  tokenizer.go
tokens/src/: error.rs  lib.rs  stream.rs  tokens.rs
tokens/src/tokenizer/: mod.rs  tokenize.rs
types/: parse.go  tokenize.go  types.go
