[package]
name = "bsharp"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "The B# programming language!"
readme = "../README.md"
keywords = ["language", "programming language", "ir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fset = { path = "../fset" }
ir = { path = "../ir" }
