[package]
name = "bsharp"
version = "0.2.3"
edition = "2021"

license = "MIT"
description = "The B# programming language!"
readme = "../README.md"
keywords = ["language", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fset = { path = "../fset", package = "bsharp_fset", version = "0.2.2" }
ir = { path = "../ir", package = "bsharp_ir", version = "0.2.2" }
interp = { path = "../interp", package = "bsharp_interp", version = "0.2.2" }
bstar = { path = "../bstar", package = "bsharp_bstar", version = "0.2.2" }
clap = { version = "4.1.13", features = ["derive"] }
