[package]
name = "fset"
version = "0.1.0"
edition = "2021"

publish = false

license = "MIT"
description = "The B# programming language!"
readme = "../README.md"
keywords = ["language", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokens = { path = "../tokens" }
parser = { path = "../parser" }
