[package]
name = "bsharp_ir"
version = "0.2.2"
edition = "2021"

license = "MIT"
description = "The B# programming language!"
readme = "../README.md"
keywords = ["language", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fset = { path = "../fset", package = "bsharp_fset", version = "0.2.2" }
